# 3d-holography

./: .gitignore  LICENSE  README.md  pyproject.toml  random_data.npy  requirements.txt  setup_venv.md
app/matlab/3Ddisplay/: main1.m  nearpropCONV.m
app/python/: CNN_refectaring.ipynb  animation_concurrent.main.py  animation_main.py  generateNumberImages.py  generateOutputDataSet.py  generateTestDataSet.py
app/python/2d-imaging/: generateTestDataSet.py  main.py
app/python/3d-imaging/: 2dmine.py  HDF.py  PlotsRandomMulti.py  changeGif.py  check_bead_intensity.py  comparePSNRof250.py  demo_plotly_visualization.py  drawBeads.py  drawPlots.py  generate3DOutput.py  generate3DOutput_2D.py  generate3DOutput_2D_Cupy.py  generate3DOutput_2D_Torch.py  generate3DTestData.py  generate3DTestData_2D.py  generateRawData.py  generateRawData_Multi.py  generate_sample_with_3d_plot.py  generate_sim_data.py  hdf_manager.py  image_loader.py  incoherentPlots.py  incoherentPlots_Random.py  init.py  main.py  makeHDF.py  makeTest.py  moveHDF.py  multiProcess.py  opt_exp.py  phase_generator.py  plot_generated_sample.py  propagation.py  readHDF.py  reconstruct_experiment_data.py  reconstruction_processor.py  selet_250samples.py  showImageHDF.py  showImageHDF250test.py  showTestValues.py  (+9 more)
app/python/3d-imaging/hdf/: data.h5
app/python/3d-imaging/src/Original3Dimages_4_2px_32x32x32/: random_data.npy
app/python/3d-imaging/tmp/: fluorescent_beads.py  generate3DOutput.py  generate3DTestNumberData.py  generateRawData_Multi.py  generateRawData_RandomMulti.py  incoherentPlots.py
(+3 files in other folders)
